# asi-projekt

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/base/: parameters.yml
metrics/: metrics.json
notebooks/: 01_eda.ipynb
src/asi_projekt/pipelines/data_processing/: nodes.py  pipeline.py
