[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asi-projekt"
version = "0.1.0"
readme = "README.md"

[project.scripts]
asi-projekt = "asi_projekt.__main__:main"

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1"
]
dev = [
    "pytest-cov~=3.0",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.1.8"
]

[tool.setuptools]
packages = ["asi_projekt"]
package-dir = {"" = "src"}

[tool.kedro]
package_name = "asi_projekt"
project_name = "LAB_2_ASI"
kedro_init_version = "0.19.9"
tools = ['None']
example_pipeline = "False"
source_dir = "src"
[tool.kedro_telemetry]
project_id = "b856ff1dcc6d4597947659d915d8e58a"
